# connect-1password

./: .env-sample  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml
src/: client.rs  connect.rs  error.rs  items.rs  lib.rs  models.rs  models_old.rs  tests.rs  vault.rs  vaults.rs
src/models/: item.rs  mod.rs  vault.rs
