[package]
name = "connect-1password"
authors = ["Michael de Silva <michael@inertialbox.com"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
exponential-backoff = "1.1.0"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
hyper-rustls = { version = "0.23.0" }
log = "0.4.16"
regex = "1.5.5"
rustls-native-certs = "0.6.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["full"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
